# weather-bot

./: .dockerignore  .env.dev  .env.example  .env.prod  .gitignore  config.py  docker-compose.dev.yaml  docker-compose.prod.yaml  pyproject.toml  readme.md
alembic/: env.py
alembic/versions/: 001_added_table.py
bot/: .env.dev  .env.example  .env.prod  Dockerfile  __main__.py  config_reader.py  pyproject.toml  requirements.txt  utils.py
bot/alembic/: env.py
bot/alembic/versions/: 002_add_relationship.py
bot/db/: __init__.py  models.py  query.py
bot/filters/: callback_data.py  cmd_filters.py
bot/gismeteo/: queries.py
bot/handlers/: cmd_handlers.py  inline_handlers.py
bot/handlers/FSM/: search_city.py
bot/keyboards/inline_buttons/: keys.py
bot/keyboards/keyboard_buttons/: screens.py
bot/middlewares/: database.py
bot/states/: weather_search.py
gismeteo/: parsers.py  res.py  utils.py
nginx/first_start/: default.conf.template
resources/: res.py
