[tool.poetry]
name = "weather_aiogram3"
version = "0.1.0"
description = ""
authors = ["Dmitriy Che <happyproger01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = {url = "https://github.com/aiogram/aiogram/archive/refs/heads/dev-3.x.zip"}
python-dotenv = "^0.21.1"
aiopygismeteo = "^5.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
