[tool.poetry]
name = "weather_aiogram3"
version = "0.1.0"
description = ""
authors = ["Dmitriy Che <happyproger01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.21.1"
aiogram = { version = "^3.0.0b8", allow-prereleases = true}
sqlalchemy = "^2.0.19"
alembic = "^1.11.1"
asyncpg = "^0.28.0"
pydantic-settings = "^2.0.2"
redis = "^5.0.1"
aiopygismeteo = "^5.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
